--- a/index.html
+++ b/index.html
@@ -58,22 +58,7 @@
       <section id="education">
         <h2>education</h2>
         <span class="lineSection"></span>
-        <div class="education-items" id="education-items">
-          <!-- <div class="education-item">
-            <h3>title. . .</h3>
-            <p class="date">Институт Технологической Сингулярности | 2028</p>
-            <p>
-              Диссертация: "Квантовые вычисления в контексте нейросетевых
-              архитектур: новая парадигма обработки данных"
-            </p>
-          </div>
-          <div class="education-item">
-            <h3>Магистр Кибернетических Наук</h3>
-            <p class="date">
-              Московский Институт Киберфизических Систем | 2025
-            </p>
-          </div> -->
-        </div>
+        <div class="education-items" id="education-items"></div>
       </section>
 
       <section id="projects">
@@ -91,137 +76,7 @@
           <button id="layout">верстка</button>
           <button id="animation">анимация</button>
         </div> -->
-        <div class="works-grid" id="works-grid">
-          <div class="work-item">
-            <img alt="guider.jpg" src="./src/img/guider.jpg" />
-            <div class="work-overlay">
-              <div class="work-text">
-                <h3 class="work-title">guider.pro</h3>
-                <p class="work-description">
-                  Сайт, где вы найдете лучшие места для путешествий, отдыха и
-                  незабываемых локаций.<br />- Next.js
-                </p>
-                <a href="https://guider.pro" target="_blank">Посетить сайт</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="work-item">
-            <img
-              alt="Интернет магазин One shot tattoo shop для мастеров татуировки и татуажа"
-              src="./src/img/oneshottattoo.shop.png"
-            />
-            <div class="work-overlay">
-              <div class="work-text">
-                <h3 class="work-title">oneshottattoo.shop</h3>
-                <p class="work-description">
-                  Интернет магазин One shot tattoo shop для мастеров татуировки
-                  и татуажа <br />- Moguta
-                </p>
-                <a href="https://oneshottattoo.shop/" target="_blank"
-                  >Посетить сайт</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="work-item">
-            <img
-              alt="Сайт показывает услуги и проекты компании в сфере бетона и гидроизоляции, с акцентом на опыт и качество"
-              src="./src/img/torkretsovilo.png"
-            />
-            <div class="work-overlay">
-              <div class="work-text">
-                <h3 class="work-title">torkretsovilo.ru</h3>
-                <p class="work-description">
-                  Сайт показывает услуги и проекты компании в сфере бетона и
-                  гидроизоляции, с акцентом на опыт и качество <br />- wordpress
-                </p>
-                <a href="https://torkretsovilo.ru/" target="_blank"
-                  >Посетить сайт</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="work-item">
-            <img
-              alt="Сайт Сервис для анализа и прогнозирования спортивных событий с
-              использованием статистики."
-              src="./src/img/sport-calc.jpg"
-            />
-            <div class="work-overlay">
-              <div class="work-text">
-                <h3 class="work-title">sport-calc.com</h3>
-                <p class="work-description">
-                  Сервис для анализа и прогнозирования спортивных событий с
-                  использованием статистики.
-                  <br />- wordpress
-                </p>
-                <a href="https://sport-calc.com/" target="_blank"
-                  >Посетить сайт</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="work-item">
-            <img
-              alt="сайт Магазин замков и дверной фурнитуры"
-              src="./src/img/moskva-zamki.jpg"
-            />
-            <div class="work-overlay">
-              <div class="work-text">
-                <h3 class="work-title">moskva-zamki.ru</h3>
-                <p class="work-description">
-                  Магазин замков и дверной фурнитуры.
-                  <br />- HTML, CSS, JS, jQuery, Bootstrap.
-                </p>
-                <a href="https://moskva-zamki.ru/" target="_blank"
-                  >Посетить сайт</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="work-item">
-            <img
-              alt="сайт Магазин замков и дверной фурнитуры"
-              src="./src/img/vekus.jpg"
-            />
-            <div class="work-overlay">
-              <div class="work-text">
-                <h3 class="work-title">vekus.ru</h3>
-                <p class="work-description">
-                  Сайт предлагает услуги по ремонту оборудования и консультации
-                  по технологиям для бизнеса.
-                  <br />- 1C-Битрикс.
-                </p>
-                <a href="https://www.vekus.ru/" target="_blank"
-                  >Посетить сайт</a
-                >
-              </div>
-            </div>
-          </div>
-
-          <div class="work-item">
-            <img
-              alt="сайт Магазин замков и дверной фурнитуры"
-              src="./src/img/aq_ru.jpg"
-            />
-            <div class="work-overlay">
-              <div class="work-text">
-                <h3 class="work-title">aq.ru</h3>
-                <p class="work-description">
-                  "Аквариус" производит компьютеры, электронику и ИТ-решения для
-                  бизнеса и госструктур.
-                  <br />- Nuxt.js, Node.js.
-                </p>
-                <a href="https://www.aq.ru/" target="_blank">Посетить сайт</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="works-grid" id="works-grid"></div>
         <div></div>
         <div></div>
       </section>
