--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <span class="lineSection"></span>
         <div class="contact-item">
           <i class="fas fa-brain"></i>
-          <span>Нейро-ID: #SK-2045-OMEGA</span>
+          <span>ID: @K1S17 </span>
         </div>
         <div class="contact-item">
           <i class="fas fa-envelope"></i>
