--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
         <span class="lineSection"></span>
 
         <div class="skills"></div>
+
+        <a class="codewars-a" href="https://www.codewars.com/users/1351618">
+          <img
+            src="https://www.codewars.com/users/1351618/badges/large"
+            alt="codewars"
+          />
+        </a>
       </section>
 
       <section id="experience">
@@ -61,30 +68,10 @@
         <div class="education-items" id="education-items"></div>
       </section>
 
-      <section id="statistics">
+      <section id="otherSkills">
         <h2>title . . .</h2>
         <span class="lineSection"></span>
-        <div class="statistics-grid" id="statistics-grid">
-          <a href="https://www.codewars.com/users/1351618">
-            <img
-              src="https://www.codewars.com/users/1351618/badges/large"
-              alt="codewars"
-            />
-          </a>
-
-          <div>
-            <a href="https://github.com/1351618">
-              <img
-                src="https://github-readme-stats.vercel.app/api/top-langs/?username=1351618&langs_count=10&title_color=0891b2&text_color=ffffff&icon_color=0891b2&bg_color=1c1917&hide_border=true&locale=en&custom_title=Top%20%Languages"
-                alt="Top Languages"
-              />
-            </a>
-          </div>
-
-          <img
-            src="https://github-readme-activity-graph.vercel.app/graph?username=1351618&theme=react-dark&bg_color=20232a&hide_border=true"
-          />
-        </div>
+        <div class="otherSkills-grid" id="otherSkills-grid"></div>
       </section>
 
       <section id="works">
