--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2></h2>
         <span class="lineSection"></span>
         <!-- сделать вкладки для разделов -->
-        <div class="hide" id="worksTaleBtnS">
+        <div class="" id="worksTaleBtnS">
           <button class="table-btn" id="site">сайты</button>
           <button class="table-btn" id="animation">анимация</button>
         </div>
