--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
             target="_blank"
           >
             <img src="./src/icons/pdfIcon.svg" alt="SVG Image" />
-
-            PDF <br />
-            en-ru
+            <p>
+              <span>PDF</span>
+              <br />
+              <span>en-ru</span>
+            </p>
           </a>
         </div>
       </section>
