--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </section>
 
       <section id="otherSkills">
-        <h2>title . . .</h2>
+        <h2>title</h2>
         <span class="lineSection"></span>
         <div class="otherSkills-grid" id="otherSkills-grid"></div>
       </section>
